--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,12 @@ cmake_minimum_required(VERSION 3.1.0 FATAL_ERROR)
 project(holovision_server)
 set(CMAKE_CXX_STANDARD 14)
 find_package(PCL 1.8 REQUIRED COMPONENTS common io features visualization console filters kdtree surface)
+find_package(Boost COMPONENTS program_options REQUIRED)
+INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
 include_directories(${PCL_INCLUDE_DIRS})
 link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 file(GLOB SRC_FILES src/*.h src/*.cpp)
 add_executable(holovision_server ${SRC_FILES})
 target_link_libraries(holovision_server ${PCL_LIBRARIES})
+TARGET_LINK_LIBRARIES(holovision_server ${Boost_LIBRARIES})
